# task-agent

./: .gitignore  AGENTS.md  README.md  REFERENCE.md
agent-python/: README.md  graph_runtime.py  main.py  pyproject.toml
backend-java/: README.md  pom.xml
backend-java/src/main/java/com/example/taskagent/: TaskAgentApplication.java
backend-java/src/main/java/com/example/taskagent/task/: Task.java  TaskController.java  TaskDataSeeder.java  TaskJpaRepository.java  TaskPriority.java  TaskRepository.java  TaskService.java  TaskStatus.java
backend-java/src/main/java/com/example/taskagent/task/dto/: CreateTaskRequest.java  TaskResponse.java
backend-java/src/main/resources/: application.properties
backend-java/src/test/java/com/example/taskagent/: TaskAgentApplicationTests.java
backend-java/src/test/java/com/example/taskagent/task/: TaskApiIntegrationTests.java  TaskControllerTests.java  TaskDataSeederTests.java  TaskJpaRepositoryTests.java  TaskRepositoryTests.java  TaskServiceTests.java
docs/: phase-0.md  phase-1.md  phase-2.md  phase-3.md  phase-4.md  phase-5.md  phase-6.md  phase-7.md  phase-8.md
mcp-server/: README.md  main.py  manual_test.py  pyproject.toml
